# adaptation-atlas-assistant

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  app.py  pyproject.toml
.github/workflows/: ci.yaml
aacp/: .env.example  agent.py  app.py  embed_datasets.py  models.py  settings.py  state.py
aacp/tools/: codeact.py  create_chart.py  select_dataset.py
discovery/: dbSetup.json  parquet_analyzer.py  requirements_parquet_analyzer.txt
scripts/: embed_datasets.py  parquet_analyzer.py
src/atlas_assistant/: agent.py  app.py  models.py  settings.py  state.py
src/atlas_assistant/tools/: choose_dataset.py  create_chart.py  select_dataset.py
tests/: conftest.py  test_agent.py
tests/tools/: test_choose_dataset.py
